<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Hutch Connect</string>
    <string name="app_name_aobrd" translatable="false">ELD</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_back">Back</string>
    <string name="action_installer_id">Done</string>
    <string name="action_dock">Dock</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_rule">Current rule</string>
    <string name="time_zone">Time Zone</string>
    <string name="co_driver">Co-Driver</string>
    <string name="vehicle_miles">Vehicle Miles</string>
    <string name="total_distance">Total Distance</string>
    <string name="total_miles_hours">Veh. Mi/Hrs</string>
    <string name="enter_total_distance" translatable="false">enter Total Distance travelled</string>
    <string name="driving_hours">Driving Hours</string>
    <string name="work_shift_hour">Work Shift Hour</string>
    <string name="driving_hours_phone">Driving</string>
    <string name="work_shift_hour_phone">Work Shift</string>
    <string name="button_back">BACK</string>
    <string name="button_save">SAVE</string>
    <string name="change">Change</string>
    <string name="duty_status_change_activity_title">Duty Status Change</string>
    <string name="duty_status_label">Select Duty Status</string>
    <string name="duty_status" translatable="false">Duty Status</string>
    <string name="annotation">Annotation : </string>
    <string name="annotation_string_1">Border</string>
    <string name="annotation_string_2">Cargo Check</string>
    <string name="annotation_string_3">Inspection</string>
    <string name="annotation_string_4">DVIR</string>
    <string name="annotation_string_5">Fueling</string>
    <string name="annotation_string_6">Loading</string>
    <string name="annotation_string_7">Unloading</string>
    <string name="instruction_text">Type Text here...</string>
    <string name="button_skip">SKIP</string>
    <string name="location_man">Location : </string>
    <string name="off_duty">OFF</string>
    <string name="sleeper">SB</string>
    <string name="driving">D</string>
    <string name="on_duty">ON</string>
    <string name="personal_use">PC</string>
    <string name="yard_move">YM</string>
    <string name="ILC">ILC</string>
    <string name="ILR">ILR</string>
    <string name="off_duty_long">OFF DUTY</string>
    <string name="sleeper_long">SLEEPER-BERTH</string>
    <string name="driving_long">DRIVING</string>
    <string name="on_duty_long">ON DUTY</string>
    <string name="personal_use_long">PERSONAL USE</string>
    <string name="yard_move_long">YARD MOVE</string>
    <string name="rule_change_activity_title">Rule Change</string>
    <string name="rule_label">Select Rule</string>
    <string name="canada_rule_1">Canada 70hr/7days - Cycle 1</string>
    <string name="canada_rule_2">Canada 120hr/14days - Cycle 2</string>
    <string name="canada_rule_AB" translatable="false">Canada Rule of Alberta</string>
    <string name="canada_logging_truck" translatable="false">Logging Truck Hours</string>
    <string name="canada_oil_well_service" translatable="false">Oil Well Service</string>
    <string name="us_rule_1">US 70hr/8days</string>
    <string name="us_rule_2">US 60hr/7days</string>
    <string name="phone_canada_rule_1">Canada\n70hr/7days</string>
    <string name="phone_canada_rule_2">Canada\n120hr/14days</string>
    <string name="phone_us_rule_1">US\n70hr/8days</string>
    <string name="phone_us_rule_2">US\n70hr/8days USV Exemption</string>
    <string name="login">IN</string>
    <string name="logout">OUT</string>
    <string name="certified_record">CR</string>
    <string name="engine_up">EU</string>
    <string name="engine_down">ED</string>
    <string name="malfunction">MF</string>
    <string name="malfunction_clear">MC</string>
    <string name="data_diagnostic">DD</string>
    <string name="data_diagnostic_clear">DC</string>
    <string name="new_event_activity_title">New Event</string>
    <string name="event_type">Event Type</string>
    <string name="event_date" translatable="false">Event Date</string>
    <string name="event_time">Time</string>
    <string name="odometer">Odometer</string>
    <string name="engine_hours">Engine Hours</string>
    <string name="shipping_document_number">Shipping Document Number</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="origin">Origin</string>
    <string name="location_description">Location Description</string>
    <string name="comments">Comments</string>
    <string name="odo">Odo</string>
    <string name="eng_hrs">Eng Hr</string>
    <string name="phone_eventtype">Type</string>
    <string name="phone_shipping_number">Shipping</string>
    <string name="hrs">Hrs</string>
    <string name="record_automatically">Automatic</string>
    <string name="record_manually">Manual</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="duty_status_changed_to_off_duty">Driver\'s Duty Status changed to OFF DUTY</string>
    <string name="duty_status_changed_to_sleeper_berth">Driver\'s Duty Status changed to SLEEPER BERTH</string>
    <string name="duty_status_changed_to_driving">Driver\'s Duty Status changed to DRIVING</string>
    <string name="duty_status_changed_to_on_duty">Driver\'s Duty Status changed to ON DUTY</string>
    <string name="duty_status_changed_to_personal_use">Driver indicates "Authorized Personal Use of CMV"</string>
    <string name="duty_status_changed_to_yard_move">Driver indicates "Yard Moves"</string>
    <string name="texttospeech_duty_status_changed_to_off_duty">you have changed the duty status to Off Duty</string>
    <string name="texttospeech_duty_status_changed_to_sleeper_berth">you have changed the duty status to SLEEPER BERTH</string>
    <string name="texttospeech_duty_status_changed_to_driving">you have changed the duty status to Driving</string>
    <string name="texttospeech_duty_status_changed_to_on_duty">you have changed the duty status to ON DUTY</string>
    <string name="texttospeech_duty_status_changed_to_personal_use">you have changed the duty status to Personal Use</string>
    <string name="texttospeech_duty_status_changed_to_yard_move">you have changed the duty status to Yard Moves</string>
    <string name="hours">Hours</string>
    <string name="record_status_active">Active</string>
    <string name="record_status_inactive">Inactive-Changed</string>
    <string name="record_status_inactive_change_request">Inactive – Change Requested</string>
    <string name="record_status_inactive_change_rejected">Inactive – Change Rejected</string>
    <string name="event">Event</string>
    <string name="record_origin_automatically">Automatically Recorded by the Driver </string>
    <string name="record_origin_edited">Edited or entered by the Driver </string>
    <string name="record_origin_edited_by_other">Edit Requested by an Authenticated User (not-driver) </string>
    <string name="record_origin_assumed">Assumed from Unidentified Driver Profile </string>
    <string name="record_date">Record Date</string>
    <string name="usdot">USDOT</string>
    <string name="carrier">Carrier</string>
    <string name="head_office_address" translatable="false">Head Office Address</string>
    <string name="home_terminal_address" translatable="false">Home Terminal Address</string>
    <string name="current_location">Current Location</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_id">Driver ID</string>
    <string name="start_end_odometer">Start End Odometer</string>
    <string name="driver_license_number">Driver License Number</string>
    <string name="driver_license_number_and_state">Driver License / State</string>
    <string name="co_driver_name">Co-Driver Name</string>
    <string name="co_driver_id">Co-Driver ID</string>
    <string name="miles_today">Miles Today</string>
    <string name="driver_license_state">Driver License State</string>
    <string name="eld_manufacturer">ELD Manufacturer</string>
    <string name="truck_tractor_id">Truck Tractor ID</string>
    <string name="truck_tractor_vin">Truck Tractor VIN</string>
    <string name="eld_id">ELD ID</string>
    <string name="shipping_id">Shipping ID</string>
    <string name="menu_daily_log">Daily Log</string>
    <string name="menu_inspect_dailylog">Inspect Dailylog</string>
    <string name="menu_create_event">Create Event</string>
    <string name="menu_uncertified_log_book">Uncertified Log Book</string>
    <string name="menu_unidentified_data">Unidentified Data</string>
    <string name="menu_edit_request">Edit Request</string>
    <string name="menu_violation_history">Violation History</string>
    <string name="menu_Message">Message</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_send_report">Send Email</string>
    <string name="menu_dvir">DVIR</string>
    <string name="menu_tpms">TPMS</string>
    <string name="action_usb_drive">USB Drive</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="action_email">Email (FMCSA eROD System)</string>
    <string name="action_webservice">Web Service (FMCSA eROD System)</string>
    <string name="button_change_status">Change\nStatus</string>
    <string name="button_keep_driving">Keep\nDriving</string>
    <string name="vin_number">VIN Number</string>
    <string name="speed">Speed</string>
    <string name="rpm">RPM</string>
    <string name="select_protocol">Hutch System has detected following protocol on your vehicle</string>
    <string name="j1708_protocol">J1708</string>
    <string name="j1939_protocol">J1939</string>
    <string name="both_protocols">J1708 and J1939</string>
    <string name="can_data_ok">Please click on Next to continue!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_navigation">Navigation</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_extra">More</string>
    <string name="next">Next</string>
    <string name="na">N/A</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="status_warning">Status Warning</string>
    <string name="countdown">Countdown</string>
    <string name="do_you_want_to_continue_to_use_vehicle">Do you want to continue to use vehicle for Driving or not?</string>
    <string name="protocol_ok">OK</string>
    <string name="check_again">Check Again</string>
    <string name="continue_personal_user_confirmation">Do you wish to continue Personal Use?</string>
    <string name="drayage">Drayage</string>
    <string name="menu_exit">Exit</string>
    <string name="help">Help</string>
    <string name="bumper">Bumper</string>
    <string name="user_mirror_inspect">Use mirror to inspect</string>
    <string name="pc_confirmation" translatable="false">PC Confirmation</string>
</resources>