<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/daily_log"
            android:icon="@drawable/ic_drawer_daliy_log"
            android:title="@string/menu_daily_log" />
        <item
            android:id="@+id/create_event"
            android:icon="@drawable/ic_drawer_create_event"
            android:title="@string/menu_create_event" />
        <item
            android:id="@+id/inspect_dailylog"
            android:icon="@drawable/ic_drawer_certified_logbook"
            android:title="@string/menu_inspect_dailylog" />
        <item
            android:id="@+id/uncertified_logbook"
            android:icon="@drawable/ic_drawer_certified_logbook"
            android:title="@string/menu_uncertified_log_book" />
        <item
            android:id="@+id/Unidentified"
            android:title="@string/menu_unidentified_data" />
        <item
            android:id="@+id/edit_request"
            android:icon="@drawable/ic_drawer_violation_history"
            android:title="@string/menu_edit_request" />
        <item
            android:id="@+id/violation_history"
            android:icon="@drawable/ic_drawer_violation_history"
            android:title="@string/menu_violation_history" />

        <item
            android:id="@+id/navigation"
            android:icon="@drawable/ic_drawer_others"
            android:title="@string/menu_navigation" />
        <item
            android:id="@+id/message"
            android:icon="@drawable/perm_group_messages"
            android:title="@string/menu_Message" />
        <item
            android:id="@+id/dvir"
            android:icon="@drawable/ic_drawer_certified_logbook"
            android:title="@string/menu_dvir" />
        <item
            android:id="@+id/drayage"
            android:icon="@drawable/ic_drawer_certified_logbook"
            android:title="@string/drayage" />
        <item
            android:id="@+id/tpms"
            android:icon="@drawable/ic_drawer_certified_logbook"
            android:title="@string/menu_tpms" />

        <item
            android:id="@+id/extra"
            android:icon="@drawable/ic_drawer_others"
            android:title="@string/menu_extra" />

        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_help"
            android:title="@string/help" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_drawer_certified_logbook"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/send_report"
            android:icon="@drawable/ic_drawer_certified_logbook"
            android:title="@string/menu_send_report" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_drawer_logout"
            android:title="@string/menu_logout" />


        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_drawer_extra"
            android:title="@string/menu_exit" />
    </group>

</menu>
