<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/f5f5f5"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dialog_icon_size"
            android:layout_height="@dimen/dialog_icon_size"
            style="@style/DialogIconStyle" />

        <TextView
            style="@style/DialogTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/status_warning" />

        <ImageButton
            android:id="@+id/imgCancel"
            android:layout_width="@dimen/dialog_close_icon_size"
            android:layout_height="@dimen/dialog_close_icon_size"
            style="@style/DialogCloseStyle"/>
    </LinearLayout>

    <View
        style="@style/DialogTitleSeprator"
        android:layout_width="match_parent"
        android:layout_height="2dp">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/countdownTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/countdown"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/countdownTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0:00"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="132sp" />


        <TextView
            android:id="@+id/dialogMessage"
            style="@style/DialogMessageTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textSize="16sp"
            android:text="@string/do_you_want_to_continue_to_use_vehicle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/butChangeStatus"
                style="@style/BigButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/button_change_status" />

            <Button
                android:id="@+id/butKeepDriving"
                style="@style/BigButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_marginRight="0dp"
                android:background="@drawable/button_bg"
                android:text="@string/button_keep_driving" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>